<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fuui!</string>
    <string name="entrar">Entrar</string>
    <string name="emailinstitucional">Email Institucional</string>
    <string name="senha">Senha</string>
    <string name="ola">Olá, Bem-vindo!</string>
    <string name="naopossuiumaconta">Não possui uma conta?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="japossuiumaconta">Já possui uma conta?</string>
    <string name="esqueceuasenha">Esqueceu a senha?</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="nomecompleto">Nome completo</string>
    <string name="genero">Gênero</string>
    <string name="idade">Idade</string>
    <string name="crieumasenha">Crie uma senha</string>
    <string name="confirmeasenha">Confirme a senha</string>
    <string name="menu_inicio">Início</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_pedido">Pedido</string>
    <string name="MeuPerfil">Meu Perfil</string>
    <string name="telefone">Numero de Telefone</string>
    <string name="curso">Curso</string>
    <string name="municipio">Município</string>
    <string name="editar">Editar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Salvar">Salvar</string>
</resources>