<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FormLogin"
    tools:ignore="RedundantNamespace">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/hi"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ola"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/hi"
        app:layout_constraintStart_toStartOf="@id/hi"
        app:layout_constraintTop_toBottomOf="@id/hi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/Edit_Text"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/emailinstitucional"
            tools:ignore="Autofill,MissingConstraints,RtlHardcoded,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2"
        android:layout_width="326dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/layout1"
        app:layout_constraintStart_toStartOf="@id/layout1"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/Edit_Text"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="20dp"
            android:hint="@string/senha"
            android:inputType="numberPassword"
            tools:ignore="Autofill,MissingConstraints,RtlHardcoded,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_cadastro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/naopossuiumaconta"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_cadastro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrese"
        android:layout_marginTop="55dp"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/esqueceuasenha"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>